<resources>
    <!--Main-->

    <string name="app_name">Efemerides</string>
    <string name="btnJugar">Jugar</string>
    <string name="btnSalir">Salir</string>
    <string name="txtTitulo">Educación</string>

    <!--Dia de la Menu-->
    <string name="btnMalvinas">Veteranos de Malvinas</string>
    <string name="btnMemoria">Dia de la Memoria</string>

    <!--Dia de la Memoria-->
    <string name="txtPregunta">Pregunta</string>
    <string name="btnRespuesta1">Respuesta 1</string>
    <string name="btnRespuesta2">Respuesta 2</string>
    <string name="btnRespuesta3">Respuesta 3</string>
    <string name="btnRespuesta4">Respuesta 4</string>
    <string name="title_activity_lista_juegos">ListaJuegos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Malvinas -->




</resources>